--- a/index.html
+++ b/index.html
@@ -11,13 +11,8 @@
         content="Coaching Website, Best Coaching, Best Coaching Centre, Coaching Centre in my area, Coaching Institution">
     <title>BBIT Syllabus</title>
 
-    <!-- Bootstrap CSS -->
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"> -->
-
     <!-- My CSS  -->
-    <link rel="stylesheet" href="css/style.css">
-    <!-- <link rel="stylesheet" href="css/style.css"> -->
+    <link rel="stylesheet" href="style.css">
 
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,19 +23,6 @@
 
     <!-- font awesome  -->
     <script src="https://kit.fontawesome.com/2c751ad132.js" crossorigin="anonymous"></script>
-
-    <!-- Bootstrap JS -->
-    <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-        crossorigin="anonymous"></script> -->
 
 </head>
 
@@ -62,7 +44,7 @@
 
         <nav class="navbar" id="navbar">
             <a href="#" class="logo">
-                <img src="img/logo.jpg" alt="logo">
+                <img src="logo.jpg" alt="logo">
             </a>
             <div id="menu_icon" class="hamburger">
                 <i class="fa-solid fa-bars"></i>
@@ -143,7 +125,7 @@
                     "Be prepared, Be Exam Ready."</p>
             </div>
             <div class="img_data">
-                <img src="img/Untitled design.png" alt="student">
+                <img src="Untitled design.png" alt="student">
             </div>
         </div>
     </section>
@@ -163,7 +145,7 @@
                     </div>
                     <div class="row flex">
                         <div class="col_lg col_md bbd_column">
-                            <img src="img/asset 2.png" alt="1st sem">
+                            <img src="asset 2.png" alt="1st sem">
                             <div class="bbd_action flex">
                                 <div class="bbd_downloads bbd_mg flex">
                                     <h3>Download</h3>
@@ -210,7 +192,7 @@
                         </div>
 
                         <div class="col_lg col_md bbd_column">
-                            <img src="img/asset 2.png" alt="1st sem">
+                            <img src="asset 2.png" alt="1st sem">
                             <div class="bbd_action flex">
                                 <div class="bbd_downloads bbd_mg flex">
                                     <h3>Download</h3>
@@ -234,7 +216,7 @@
                         </div>
 
                         <div class="col_lg col_md bbd_column">
-                            <img src="img/asset 2.png" alt="1st sem">
+                            <img src="asset 2.png" alt="1st sem">
                             <div class="bbd_action flex">
                                 <div class="bbd_downloads bbd_mg flex">
                                     <h3>Download</h3>
@@ -258,7 +240,7 @@
                         </div>
 
                         <div class="col_lg col_md bbd_column">
-                            <img src="img/asset 2.png" alt="1st sem">
+                            <img src="asset 2.png" alt="1st sem">
                             <div class="bbd_action flex">
                                 <div class="bbd_downloads bbd_mg flex">
                                     <h3>Download</h3>
@@ -294,7 +276,7 @@
                     </div>
                     <div class="row flex">
                         <div class="col_lg col_md bbd_column">
-                            <img src="img/asset 2.png" alt="1st sem">
+                            <img src="asset 2.png" alt="1st sem">
                             <div class="bbd_action flex">
                                 <div class="bbd_downloads bbd_mg flex">
                                     <h3>Download</h3>
@@ -318,7 +300,7 @@
                         </div>
 
                         <div class="col_lg col_md bbd_column">
-                            <img src="img/asset 2.png" alt="1st sem">
+                            <img src="asset 2.png" alt="1st sem">
                             <div class="bbd_action flex">
                                 <div class="bbd_downloads bbd_mg flex">
                                     <h3>Download</h3>
@@ -342,7 +324,7 @@
                         </div>
 
                         <div class="col_lg col_md bbd_column">
-                            <img src="img/asset 2.png" alt="1st sem">
+                            <img src="asset 2.png" alt="1st sem">
                             <div class="bbd_action flex">
                                 <div class="bbd_downloads bbd_mg flex">
                                     <h3>Download</h3>
@@ -366,7 +348,7 @@
                         </div>
 
                         <div class="col_lg col_md bbd_column">
-                            <img src="img/asset 2.png" alt="1st sem">
+                            <img src="asset 2.png" alt="1st sem">
                             <div class="bbd_action flex">
                                 <div class="bbd_downloads bbd_mg flex">
                                     <h3>Download</h3>
@@ -402,7 +384,7 @@
                     </div>
                     <div class="row flex">
                         <div class="col_lg col_md bbd_column">
-                            <img src="img/asset 2.png" alt="1st sem">
+                            <img src="asset 2.png" alt="1st sem">
                             <div class="bbd_action flex">
                                 <div class="bbd_downloads bbd_mg flex">
                                     <h3>Download</h3>
@@ -426,7 +408,7 @@
                         </div>
 
                         <div class="col_lg col_md bbd_column">
-                            <img src="img/asset 2.png" alt="1st sem">
+                            <img src="asset 2.png" alt="1st sem">
                             <div class="bbd_action flex">
                                 <div class="bbd_downloads bbd_mg flex">
                                     <h3>Download</h3>
@@ -450,7 +432,7 @@
                         </div>
 
                         <div class="col_lg col_md bbd_column">
-                            <img src="img/asset 2.png" alt="1st sem">
+                            <img src="asset 2.png" alt="1st sem">
                             <div class="bbd_action flex">
                                 <div class="bbd_downloads bbd_mg flex">
                                     <h3>Download</h3>
@@ -474,7 +456,7 @@
                         </div>
 
                         <div class="col_lg col_md bbd_column">
-                            <img src="img/asset 2.png" alt="1st sem">
+                            <img src="asset 2.png" alt="1st sem">
                             <div class="bbd_action flex">
                                 <div class="bbd_downloads bbd_mg flex">
                                     <h3>Download</h3>
@@ -510,7 +492,7 @@
                     </div>
                     <div class="row flex">
                         <div class="col_lg col_md bbd_column">
-                            <img src="img/asset 2.png" alt="1st sem">
+                            <img src="asset 2.png" alt="1st sem">
                             <div class="bbd_action flex">
                                 <div class="bbd_downloads bbd_mg flex">
                                     <h3>Download</h3>
@@ -534,7 +516,7 @@
                         </div>
 
                         <div class="col_lg col_md bbd_column">
-                            <img src="img/asset 2.png" alt="1st sem">
+                            <img src="asset 2.png" alt="1st sem">
                             <div class="bbd_action flex">
                                 <div class="bbd_downloads bbd_mg flex">
                                     <h3>Download</h3>
@@ -558,7 +540,7 @@
                         </div>
 
                         <div class="col_lg col_md bbd_column">
-                            <img src="img/asset 2.png" alt="1st sem">
+                            <img src="asset 2.png" alt="1st sem">
                             <div class="bbd_action flex">
                                 <div class="bbd_downloads bbd_mg flex">
                                     <h3>Download</h3>
@@ -582,7 +564,7 @@
                         </div>
 
                         <div class="col_lg col_md bbd_column">
-                            <img src="img/asset 2.png" alt="1st sem">
+                            <img src="asset 2.png" alt="1st sem">
                             <div class="bbd_action flex">
                                 <div class="bbd_downloads bbd_mg flex">
                                     <h3>Download</h3>
